Open/close modals when using nav links
- Selecting nav item opens appropriate modal
- Closing modal on 'x'
- Closing modal when click outside of modal
- Closing previously opened modal if new modal was opened by using nav items

--- a/index.html
+++ b/index.html
@@ -16,13 +16,42 @@
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__item">
-          <a href="#" class="nav__link">Rules</a></li>
+          <a href="#" class="nav__link">Rules</a>
+          
+        </li>
         <li class="nav__item">
-          <a href="#" class="nav__link">Previous moves</a>
+          <a href="#" class="nav__link">Previous moves</a></li>
         </li>
         <li class="nav__item">
           <a href="#" class="nav__link">Author</a></li>
       </ul>
+      <div class="modal-bg">
+        <div class="modal">
+          <div class="modal__content">
+            <h2 class="modal__header">Rules</h2>
+            <span class="modal--close">&times;</span>
+            <p>This is test modal for rules</p>
+          </div>
+        </div>
+      </div>
+      <div class="modal-bg">
+        <div class="modal">
+            <div class="modal__content">
+              <span class="modal--close">&times;</span>
+              <h2 class="modal__header">Previous moves</h2>
+              <p>This is test modal for previous moves</p>
+            </div>
+          </div>
+        </div>
+        <div class="modal-bg">
+          <div class="modal">
+              <div class="modal__content">
+                <span class="modal--close">&times;</span>
+                <h2 class="modal__header">Author</h2>
+                <p>This is test modal for author</p>
+              </div>
+            </div>
+            </div>
     </nav>
     <main class="page__content">
       <div class="message-box">
@@ -39,7 +68,7 @@
           <p class="score-box__label">User's score</p>
         </div>
           <div class="user-choice">
-            <img class="user-choice__icon" src="img/rock-96.png" alt="selected icon by user"/>
+            <img class="user-choice__icon" src="" alt="selected icon by user"/>
         </div>
         </div>
         <p class="result-container__text">vs</p>
