User selection appears in appropriate box
- User selection appears in appropriate box
- By default question mark icon appears within box (before any user selection)

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <p class="score-box__label">User's score</p>
         </div>
           <div class="user-choice">
-            <img class="user-choice__icon" src="" alt="selected icon by user"/>
+            <img class="user-choice__icon" src="/img/questionmark-96.png" alt="selected icon by user"/>
         </div>
         </div>
         <p class="result-container__text">vs</p>
