--- a/index.html
+++ b/index.html
@@ -4,15 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet" />
     <title>Rock Paper Scissors game</title>
   </head>
-
   <body class="page">
+    <div class="form-bg">
+      <div class="form-box">
+          <form class="form">
+            <div class="form__content">
+              <h2 class="form__heading">Rock Paper Scissors game</h2>
+            <div class="username">
+              <input type="text" name="" placeholder="Your name" class="input--text" required/>
+            </div>
+              <p class="game-options__header">GAME TYPE</h2>
+                <ul class="game-options__list">
+                  <li class="game-options__item" data-value="1">Single</li>
+                  <li class="game-options__item" data-value="3">First to 3</li>
+                  <li class="game-options__item" data-value="5">First to 5</li>
+                </ul>
+            <button class="btn">Start game</button>
+          </div>
+          </form>
+        </div>
+        </div>
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__item">
