Form validation and form close when all required options/data are selected/added
1. Form validation
2. Form close when all required data are selected
3. Storing user name and game type

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="form__content">
               <h2 class="form__heading">Rock Paper Scissors game</h2>
             <div class="username">
-              <input type="text" name="" placeholder="Your name" class="input--text" required/>
+              <input type="text" name="" placeholder="Your name" class="input--text" required minlength="1" maxlength="10"/>
             </div>
               <p class="game-options__header">GAME TYPE</h2>
                 <ul class="game-options__list">
@@ -23,7 +23,7 @@
                   <li class="game-options__item" data-value="3">First to 3</li>
                   <li class="game-options__item" data-value="5">First to 5</li>
                 </ul>
-            <button class="btn">Start game</button>
+            <button class="btn" type="button">Start game</button>
           </div>
           </form>
         </div>
