Handling username and selected game type
- Displaying username and selected game type
- Removed skew from message box

--- a/index.html
+++ b/index.html
@@ -75,32 +75,7 @@
       <div class="result-container">
         <div class="user-container">
           <div class="score-box">
-            <img
-              class="score-box__icon--star"
-              src="img/star-24.png"
-              alt="star icon"
-            />
-            <img
-              class="score-box__icon--star"
-              src="img/star-24-empty.png"
-              alt="star icon"
-            />
-            <img
-              class="score-box__icon--star"
-              src="img/star-24-empty.png"
-              alt="star icon"
-            />
-            <img
-              class="score-box__icon--star"
-              src="img/star-24-empty.png"
-              alt="star icon"
-            />
-            <img
-              class="score-box__icon--star"
-              src="img/star-24-empty.png"
-              alt="star icon"
-            />
-            <p class="score-box__label">User's score</p>
+            <p class="score-box__label jsUsername"></p>
           </div>
           <div class="user-choice">
             <img
@@ -113,31 +88,6 @@
         <p class="result-container__text">vs</p>
         <div class="opponent-container">
           <div class="score-box">
-            <img
-              class="score-box__icon--star"
-              src="img/star-24.png"
-              alt="star icon"
-            />
-            <img
-              class="score-box__icon--star"
-              src="img/star-24.png"
-              alt="star icon"
-            />
-            <img
-              class="score-box__icon--star"
-              src="img/star-24.png"
-              alt="star icon"
-            />
-            <img
-              class="score-box__icon--star"
-              src="img/star-24-empty.png"
-              alt="star icon"
-            />
-            <img
-              class="score-box__icon--star"
-              src="img/star-24-empty.png"
-              alt="star icon"
-            />
             <p class="score-box__label">Opponent's score</p>
           </div>
           <div class="opponent-choice">
