Storing user and pc randomly generated selection
- opponent selection is generated randomly
- storing opponent selection and adding appropriate src to img element
- storing user selection data-value

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <div class="opponent-choice">
             <img
               class="opponent-choice__icon"
-              src="img/rock-96-reversed.png"
+              src=""
               alt="selected icon by opponent"
             />
           </div>
@@ -101,13 +101,13 @@
       </div>
       <div class="choice-container">
         <div class="choice-container__icon">
-          <img src="img/rock-96.png" alt="rock icon" />
+          <img src="img/rock-96.png" alt="rock icon" data-value="r" />
         </div>
         <div class="choice-container__icon">
-          <img src="img/paper-96.png" alt="paper icon" />
+          <img src="img/paper-96.png" alt="paper icon" data-value="p" />
         </div>
         <div class="choice-container__icon">
-          <img src="img/scissors-96.png" alt="scissors icon" />
+          <img src="img/scissors-96.png" alt="scissors icon" data-value="s" />
         </div>
       </div>
     </main>
